fixed select audio issue

--- a/app/views/questions/add_explanation.html.erb
+++ b/app/views/questions/add_explanation.html.erb
@@ -147,7 +147,7 @@
     var credentials = new AWS.Credentials('AKIAYEPQTPG6K7CEFU6D', 'XtUqnXWkwvPvlK+t8gwuShuESJA1fjnBV1q6AwTX');
     AWS.config.region = bucketRegion;
     AWS.config.credentials = credentials;
-    console.log(AWS.config.credentials);
+    // console.log(AWS.config.credentials);
 
     var bucket = new AWS.S3({
       params: {
